<resources>
    <string name="app_name">team zon 1</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_button">ButtonActivity</string>
    <string name="title_activity_map">Map</string>
    <string name="tz">TEAM ZON</string>
    <string name="log">LOGIN</string>
    <string name="title_activity_login1">Sign in</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_maps1">Map</string>
    <string name="title_activity_main_activitydfsd">MainActivitydfsd</string>
</resources>
