<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hp.teamzon1.LoginActivity"
    android:background="@color/colorPrimaryDark"
    android:showDividers="end"
    android:weightSum="1">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="291dp"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tz"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:height="60dp"
        android:textSize="50sp"
        android:textColor="#FFCDD2"
        android:fontFamily="Roboto bold italic" />

    <ImageView
        android:layout_width="241dp"
        android:layout_height="96dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/android"

        android:layout_marginTop="20dp" />
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="2"
                android:singleLine="true"
                android:visibility="visible"
                android:textColor="#ffffff"
                android:textColorHighlight="#ffffff"
                android:textColorHint="#ffffff"
                android:textColorLink="#ffffff"
                android:textSize="25sp"
                android:textIsSelectable="true"


                 />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="visible"
                android:textColorLink="#ffffff"
                android:textColorHint="#ffffff"
                android:textColorHighlight="#ffffff"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:shadowColor="#ffffff"
                android:foreground="#ffffff"
                android:textIsSelectable="true" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/log"
                android:textStyle="bold"
                android:background="#D32F2F"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:elegantTextHeight="false" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
